--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
         <mat-label>Password</mat-label>
         <input matInput type="password" formControlName="password" required>
       </mat-form-field>
-      <button mat-raised-button color="white" type="submit">Login</button>
+      <button mat-raised-button type="submit">Login</button>
     </form>
   </div>
 </div>
